# ptz-control-app

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
.github/workflows/: codequality.yml  deploy.yml  workflow.yml
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Button.tsx  ControlsEditor.tsx  DropdownSelector.tsx  Expandable.tsx  NumberInput.tsx  OptionSelector.tsx  PanTiltSelector.tsx  RangeSelector.tsx  SettingsEditor.tsx  TextInput.tsx
frontend/src/pages/: CameraEditor.tsx  CameraList.tsx  PresetEditor.tsx
frontend/src/util/: csrf.ts  types.ts
ptz_app/: __init__.py  apps.py  models.py  urls.py  views.py
ptz_app/functions/: camera.py
ptz_app/migrations/: 0001_initial.py
ptz_app/templates/ptz_app/: camera.html  index.html  preset.html
ptz_app/views/: __init__.py  cameras.py  index.py  presets.py
ptz_control_app/: main.py
ptz_project/: asgi.py  settings.py  urls.py  wsgi.py
